--- a/server/static/index.html
+++ b/server/static/index.html
@@ -1,1 +1,63 @@
-<h1>hello</h1>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+      <title>Semnome</title>
+  </head>
+  <body>
+    <div>
+      <div class="jumbotron">
+        <div class="container">
+          <h4>NÓS ACREDITAMOS QUE</h4>
+          <h2>Grandes projetos começam com ótimas negociações.</h2>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-10 col-md-2">
+            <div>
+              <img src="..." alt="...">
+              <div class="caption">
+                <h4>DE MANEIRA TRANSPARETE</h4>
+                <p>Aonde seja possível ver no detalhe todas as aprovações do cliente. Garantindo total segurança para quem está prestando o serviço.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-5 col-md-2">
+            <div>
+              <img src="..." alt="...">
+              <div class="caption">
+                <h4>PERSONALIZADA</h4>
+                <p>Para quem acredita que tecnologia e design fazem a diferença no seu processo de trabalho. E quer ver a sua marca presente em todos os contatos com seu cliente.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-5 col-md-2">
+            <div>
+              <img src="..." alt="...">
+              <div class="caption">
+                <h4>IDEAL PARA AMBAS AS PARTES</h4>
+                <p>O cliente também tem vez. Revisando e assinando propostas online garantindo a segurança da negociação para fechar o negócio.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button type="button" class="btn" data-toggle="modal" data-target=".email-modal">Eu também acredito</button>
+        <div class="modal fade email-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+          <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+              lalal
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+  </body>
+  <script data-main="main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.min.js"></script>
+</html>
+
