--- a/server/static/index.html
+++ b/server/static/index.html
@@ -3,61 +3,57 @@
     <meta charset="utf-8">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-      <title>Semnome</title>
+      <link href="static/css/intented-lp.css" rel="stylesheet">
+      <title>Grandes projetos começam com ótimas negociações</title>
   </head>
   <body>
     <div>
-      <div class="jumbotron">
-        <div class="container">
-          <h4>NÓS ACREDITAMOS QUE</h4>
-          <h2>Grandes projetos começam com ótimas negociações.</h2>
-        </div>
-      </div>
       <div class="container">
-        <div class="row">
-          <div class="col-sm-10 col-md-2">
-            <div>
-              <img src="..." alt="...">
-              <div class="caption">
-                <h4>DE MANEIRA TRANSPARETE</h4>
-                <p>Aonde seja possível ver no detalhe todas as aprovações do cliente. Garantindo total segurança para quem está prestando o serviço.</p>
+        <header class="intented-header">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-12">
+                    <div class="header-logo"></div>
+                    <div class="tagline header-title">
+                      <span>NÓS ACREDITAMOS QUE</span>
+                    </div>
+                    <div class="tagline header-sub-title">
+                      <span>Grandes projetos começam com ótimas negociações</span>
+                    </div>
+                  </div>
               </div>
-            </div>
           </div>
-          <div class="col-sm-5 col-md-2">
-            <div>
-              <img src="..." alt="...">
-              <div class="caption">
-                <h4>PERSONALIZADA</h4>
-                <p>Para quem acredita que tecnologia e design fazem a diferença no seu processo de trabalho. E quer ver a sua marca presente em todos os contatos com seu cliente.</p>
+      </header>
+        <div class="container">
+          <div class="row">
+              <div class="col-sm-4">
+                  <h4>DE MANEIRA TRANSPARENTE</h4>
+                  <p>Aonde seja possível ver no detalhe todas as aprovações do cliente. Garantindo total segurança para quem está prestando o serviço.</p>
               </div>
-            </div>
-          </div>
-          <div class="col-sm-5 col-md-2">
-            <div>
-              <img src="..." alt="...">
-              <div class="caption">
-                <h4>IDEAL PARA AMBAS AS PARTES</h4>
-                <p>O cliente também tem vez. Revisando e assinando propostas online garantindo a segurança da negociação para fechar o negócio.</p>
+              <div class="col-sm-4">
+                  <h4>PERSONALIZADA</h4>
+                  <p>Para quem acredita que tecnologia e design fazem a diferença no seu processo de trabalho. E quer ver a sua marca presente em todos os contatos com seu cliente.</p>
               </div>
-            </div>
+              <div class="col-sm-4">
+                  <h4>IDEAL PARA AMBAS AS PARTES</h4>
+                  <p>O cliente também tem vez. Revisando e assinando propostas online garantindo a segurança da negociação para fechar o negócio.</p>
+              </div>
           </div>
-        </div>
-        <button type="button" class="btn" data-toggle="modal" data-target=".email-modal">Eu também acredito</button>
+        <button type="button" class="btn call-to-lead" data-toggle="modal" data-target=".email-modal">Eu também acredito</button>
         <div class="modal fade email-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
           <div class="modal-dialog modal-sm">
             <div class="modal-content">
-              lalal
+              modal
             </div>
           </div>
         </div>
       </div>
+      <footer>
+            <div class="row intented-footer">
+            </div>
+        </footer>
     </div>
-
-
-
-
   </body>
-  <script data-main="main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.min.js"></script>
+  <script data-main="static/js/main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </html>
-
