Including style and modifing the lp

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -12,15 +12,24 @@
         <header class="intented-header">
           <div class="container">
               <div class="row">
-                  <div class="col-lg-12">
+                  <div class="col-lg-10">
                     <div class="header-logo"></div>
-                    <div class="tagline header-title">
-                      <span>NÓS ACREDITAMOS QUE</span>
-                    </div>
-                    <div class="tagline header-sub-title">
-                      <span>Grandes projetos começam com ótimas negociações</span>
-                    </div>
                   </div>
+                  <div class="col-lg-2">
+                    <a class="lenguage" href="#">PT</a>
+                    <a class="lenguage" href="#">EN</a>
+                    <a class="lenguage" href="#">ES</a>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="tagline header-title">
+                    <span>NÓS ACREDITAMOS QUE</span>
+                  </div>
+                  <div class="tagline header-sub-title">
+                    <span>Grandes projetos começam com ótimas negociações</span>
+                  </div>
+                </div>
               </div>
           </div>
       </header>
