Including the style of CTA and modal

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -50,9 +50,15 @@
           </div>
         <button type="button" class="btn call-to-lead" data-toggle="modal" data-target=".email-modal">Eu também acredito</button>
         <div class="modal fade email-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-          <div class="modal-dialog modal-sm">
+          <div class="modal-dialog modal-lg">
             <div class="modal-content">
-              modal
+              <div class=".modal-body">
+                <h4>VOCÊ TAMBÉM ACREDITA?</h4>
+                <p>We are in closed beta at the moment. Sign up below with your company email and we will get back to you once more spaces become available.</p>
+                <input type="ENVIAR EMAIL PARA CONTATO" class="form-control" id="usr">
+                <button type="button" class="btn send-mail" data-toggle="modal" data-target=".email-modal">Enviar email para contato</button>
+
+              </div>
             </div>
           </div>
         </div>
