Add support to ptb,en and es

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -4,7 +4,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
       <link href="static/css/intented-lp.css" rel="stylesheet">
-      <title>Grandes projetos começam com ótimas negociações</title>
+      <title class="page-tittle">Grandes projetos começam com ótimas negociações</title>
   </head>
   <body>
     <div>
@@ -16,9 +16,9 @@
                     <div class="header-logo"></div>
                   </div>
                   <div class="col-lg-2">
-                    <a class="lenguage" href="#">PT</a>
-                    <a class="lenguage" href="#">EN</a>
-                    <a class="lenguage" href="#">ES</a>
+                    <a class="lenguage pt-lang" href="#PT">PT</a>
+                    <a class="lenguage en-lang" href="#EN">EN</a>
+                    <a class="lenguage es-lang" href="#ES">ES</a>
                   </div>
               </div>
               <div class="row">
