--- a/server/static/index.html
+++ b/server/static/index.html
@@ -4,6 +4,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
       <link href="static/css/intented-lp.css" rel="stylesheet">
+      <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700|PT+Sans:400,700' rel='stylesheet' type='text/css'>
       <title class="page-tittle">Grandes projetos começam com ótimas negociações</title>
   </head>
   <body>
@@ -12,9 +13,10 @@
         <header class="intented-header">
           <div class="container">
               <div class="row">
-                  <div class="col-lg-10">
+                  <div class="col-lg-3">
                     <div class="header-logo"></div>
                   </div>
+                  <div class="col-lg-7"></div>
                   <div class="col-lg-2">
                     <a class="lenguage pt-lang" href="#PT">PT</a>
                     <a class="lenguage en-lang" href="#EN">EN</a>
@@ -35,6 +37,16 @@
       </header>
         <div class="container">
           <div class="row">
+            <div class="col-lg-12">
+              <div class="body-title">
+                <span>CONHEÇA A NEWINTEND</span>
+              </div>
+              <div class="body-sub-title">
+                <span>Crie propostas eficientes melhorando a comunicação com seu cliente</span>
+              </div>
+            </div>
+          </div>
+          <div class="row">
               <div class="col-sm-4">
                   <h4>DE MANEIRA TRANSPARENTE</h4>
                   <p>Aonde seja possível ver no detalhe todas as aprovações do cliente. Garantindo total segurança para quem está prestando o serviço.</p>
@@ -48,16 +60,17 @@
                   <p>O cliente também tem vez. Revisando e assinando propostas online garantindo a segurança da negociação para fechar o negócio.</p>
               </div>
           </div>
-        <button type="button" class="btn call-to-lead" data-toggle="modal" data-target=".email-modal">Eu também acredito</button>
         <div class="modal fade email-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
               <div class=".modal-body">
-                <h4>VOCÊ TAMBÉM ACREDITA?</h4>
-                <p>We are in closed beta at the moment. Sign up below with your company email and we will get back to you once more spaces become available.</p>
-                <input type="ENVIAR EMAIL PARA CONTATO" class="form-control" id="usr">
-                <button type="button" class="btn send-mail" data-toggle="modal" data-target=".email-modal">Enviar email para contato</button>
-
+                <h4>OBRIGADO!</h4>
+                <p>Em breve entraremos em contato.</p>
+                <p>Gostaria de 6 messes grátis quando saírmos do beta?</p>
+                <p>Compartilhe e tenha 10 amigos inscritos.</p>
+                <p>face google linkedin twitter</p>
+                <p>Ou use o seu link único</p>
+                <a href="#">link aqui</a>
               </div>
             </div>
           </div>
@@ -65,6 +78,18 @@
       </div>
       <footer>
             <div class="row intented-footer">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="body-sub-title">
+                    <span>Gostaria de ter acesso antecipado antes de lançarmos?</span>
+                  </div>
+                  <div class="body-explain">
+                    <span>Estamos em beta fechado no momento. Cadastre-se com o email da sua empresa e nós retornaremos para você assim que possível.</span>
+                  </div>
+                    <input class="form-control">
+                </div>
+              </div>
+              <button type="button" class="btn call-to-lead" data-toggle="modal" data-target=".email-modal">Cadastrar email para acesso</button>
             </div>
         </footer>
     </div>
