Including icon and product images, change styles and add fonts

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -13,11 +13,10 @@
         <header class="intented-header">
           <div class="container">
               <div class="row">
-                  <div class="col-lg-3">
+                  <div class="col-md-6">
                     <div class="header-logo"></div>
                   </div>
-                  <div class="col-lg-7"></div>
-                  <div class="col-lg-2">
+                  <div class="col-md-6 choice-lenguage">
                     <a class="lenguage pt-lang" href="#PT">PT</a>
                     <a class="lenguage en-lang" href="#EN">EN</a>
                     <a class="lenguage es-lang" href="#ES">ES</a>
@@ -33,6 +32,11 @@
                   </div>
                 </div>
               </div>
+              <div class="row">
+                <div class="col-lg-12">
+                  <img src="static/img/product.png" class="img-responsive product-img" alt="">
+                </div>
+              </div>
           </div>
       </header>
         <div class="container">
@@ -41,21 +45,24 @@
               <div class="body-title">
                 <span>CONHEÇA A NEWINTEND</span>
               </div>
-              <div class="body-sub-title">
+              <div class="body-sub-title benefits">
                 <span>Crie propostas eficientes melhorando a comunicação com seu cliente</span>
               </div>
             </div>
           </div>
           <div class="row">
               <div class="col-sm-4">
+                  <img src="static/img/transparency.png" class="img-responsive img-center" alt="">
                   <h4>DE MANEIRA TRANSPARENTE</h4>
                   <p>Aonde seja possível ver no detalhe todas as aprovações do cliente. Garantindo total segurança para quem está prestando o serviço.</p>
               </div>
               <div class="col-sm-4">
+                  <img src="static/img/custom.png" class="img-responsive img-center" alt="">
                   <h4>PERSONALIZADA</h4>
                   <p>Para quem acredita que tecnologia e design fazem a diferença no seu processo de trabalho. E quer ver a sua marca presente em todos os contatos com seu cliente.</p>
               </div>
               <div class="col-sm-4">
+                  <img src="static/img/boths.png" class="img-responsive img-center" alt="">
                   <h4>IDEAL PARA AMBAS AS PARTES</h4>
                   <p>O cliente também tem vez. Revisando e assinando propostas online garantindo a segurança da negociação para fechar o negócio.</p>
               </div>
@@ -80,7 +87,7 @@
             <div class="row intented-footer">
               <div class="row">
                 <div class="col-lg-12">
-                  <div class="body-sub-title">
+                  <div class="body-sub-title register">
                     <span>Gostaria de ter acesso antecipado antes de lançarmos?</span>
                   </div>
                   <div class="body-explain">
