--- a/server/static/index.html
+++ b/server/static/index.html
@@ -5,7 +5,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
       <link href="static/css/intented-lp.css" rel="stylesheet">
       <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700|PT+Sans:400,700' rel='stylesheet' type='text/css'>
-      <title class="page-tittle">Grandes projetos começam com ótimas negociações</title>
+      <title class="page-tittle">Propostas eficientes</title>
   </head>
   <body>
     <div>
@@ -70,14 +70,14 @@
         <div class="modal fade email-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
-              <div class=".modal-body">
+              <div class="modal-body">
                 <h4>OBRIGADO!</h4>
                 <p>Em breve entraremos em contato.</p>
                 <p>Gostaria de 6 messes grátis quando saírmos do beta?</p>
                 <p>Compartilhe e tenha 10 amigos inscritos.</p>
                 <p>face google linkedin twitter</p>
                 <p>Ou use o seu link único</p>
-                <a href="#">link aqui</a>
+                <p>www.newintented.com/?referal=YW24a12BdsDF3u4n2vbnR3Bg2f</p>
               </div>
             </div>
           </div>
