Referal cycle completed, removed language for now

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -7,26 +7,21 @@
       <link rel="stylesheet" href = "https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" >
       <link href="static/css/intented-lp.css" rel="stylesheet">
       <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700|PT+Sans:400,700' rel='stylesheet' type='text/css'>
-      <link href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-notify/0.2.0/css/bootstrap-notify.css' rel='stylesheet' type='text/css'>
       <title class="page-tittle">Propostas eficientes</title>
-      <meta property="og:url"           content="http://www.newintend.com" />
-      <meta property="og:type"          content="website" />
-      <meta property="og:title"         content="Propostas eficientes" />
-      <meta property="og:description"   content="Crie propostas eficientes melhorando a comunicação com seu cliente" />
-      <meta property="og:image"         content="http://www.your-domain.com/path/image.jpg" />
+      <meta property="og:url" content="http://www.newintend.com" />
+      <meta property="og:type" content="website" />
+      <meta property="og:title" content="Propostas eficientes" />
+      <meta property="og:description" content="Crie propostas eficientes melhorando a comunicação com seu cliente" />
+      <meta property="og:image" content="http://www.your-domain.com/path/image.jpg" />
   </head>
   <body>
+
+
     <div>
       <div>
         <header class="intented-header">
-
           <div class="header-organize">
               <div class="header-logo"></div>
-              <div class="choice-lenguage">
-                <a class="lenguage pt-lang" href="#PT">PT</a>
-                <a class="lenguage en-lang" href="#EN">EN</a>
-                <a class="lenguage es-lang" href="#ES">ES</a>
-              </div>
           </div>
 
           <div class="container">
@@ -84,21 +79,21 @@
                     <p class="offer-bonus">Gostaria de ter 6 messes grátis quando saírmos do beta?</p>
                     <p class="feature-explain">Compartilhe e tenha 10 amigos inscritos.</p>
                     <div class="social-buttons">
-                      <a class="btn btn-social-icon btn-lg btn-facebook">
+                      <a class="btn btn-social-icon btn-lg btn-facebook" target="_blank" title="Compartilhar no Facebook">
                         <i class="fa fa-facebook"></i>
                       </a>
-                      <a class="btn btn-social-icon btn-lg btn-google">
+                      <a class="btn btn-social-icon btn-lg btn-google" target="_blank" title="Compartilhar no Google+">
                         <i class="fa fa-google-plus"></i>
                       </a>
-                      <a class="btn btn-social-icon btn-lg btn-linkedin">
+                      <a class="btn btn-social-icon btn-lg btn-linkedin" target="_blank" title="Compartilhar no LinkedIn">
                         <i class="fa fa-linkedin"></i>
                       </a>
-                      <a class="btn btn-social-icon btn-lg btn-twitter">
+                      <a class="btn btn-social-icon btn-lg btn-twitter" target="_blank" title="Compartilhar no Twitter">
                         <i class="fa fa-twitter"></i>
                       </a>
                     </div>
                     <p class="feature-explain">Ou use o seu link único</p>
-                    <p class="referal-link">www.newintented.com/?ref=e214174abe4d4e8037ee265dd350d1d7</p>
+                    <p class="referal-link"></p>
               </div>
             </div>
           </div>
@@ -136,11 +131,11 @@
     (function() {
     function ldinsp(){var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
     document.readyState != "complete" ? (window.attachEvent ? window.attachEvent('onload', ldinsp) : window.addEventListener('load', ldinsp, false)) : ldinsp();
-
     })();
     </script>
     <!-- End Inspectlet Embed Code -->
 
   </body>
+
   <script data-main="static/js/main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.min.js"></script>
 </html>
