Including logo and change lp colors

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -7,31 +7,30 @@
       <link rel="stylesheet" href = "https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" >
       <link href="static/css/intented-lp.css" rel="stylesheet">
       <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700|PT+Sans:400,700' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
       <title class="page-tittle">Propostas eficientes</title>
       <meta property="og:url" content="http://www.newintend.com" />
       <meta property="og:type" content="website" />
-      <meta property="og:title" content="Propostas eficientes" />
-      <meta property="og:description" content="Crie propostas eficientes melhorando a comunicação com seu cliente" />
-      <meta property="og:image" content="http://www.your-domain.com/path/image.jpg" />
+      <meta property="og:title" content="NewIntend" />
+      <meta property="og:image" content="http://www.newintend/static/img/logo.png" />
+      <meta property="busca:species" content="Home"/>
+      <meta property="busca:publisher" content="www.newintend.com"/>
+      <meta name="description" content="Só na newintend.com você emite propostas comerciais de forma eficiente e personalizada, aproximando sua empresa de seus clientes e garantindo segurança e agilidade em suas negociações."/>
+      <meta name="keywords" content="Proposta Comercial, Orçamento, Proposta, Sistema, Negociação, Personalizada, Agilidade, Arquitetura, Projeto, Exemplo"/>
+      <meta name="application-name" content="newintend.com"/>
   </head>
   <body>
-
-
     <div>
       <div>
         <header class="intented-header">
           <div class="header-organize">
-              <div class="header-logo"></div>
+              <img src="static/img/logo.png" class="intented-logo" alt="">
           </div>
-
           <div class="container">
               <div class="row">
                 <div class="col-lg-12">
-                  <div class="tagline header-title">
-                    <span>NÓS ACREDITAMOS QUE</span>
-                  </div>
-                  <div class="tagline header-sub-title">
-                    <span>Grandes projetos começam com ótimas negociações</span>
+                  <div class="header-sub-title">
+                    <span>Conheça a newintend e emita propostas comerciais eficientes</span>
                   </div>
                 </div>
               </div>
@@ -46,10 +45,10 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="body-title">
-                <span>CONHEÇA A NEWINTEND</span>
+                <span>NÓS ACREDITAMOS QUE</span>
               </div>
               <div class="body-sub-title benefits">
-                <span>Crie propostas eficientes melhorando a comunicação com seu cliente</span>
+                <span>Grandes projetos começam com ótimas negociações</span>
               </div>
             </div>
           </div>
@@ -57,17 +56,17 @@
               <div class="col-sm-4">
                   <img src="static/img/transparency.png" class="img-responsive img-center" alt="">
                   <h4>DE MANEIRA TRANSPARENTE</h4>
-                  <p class="feature-explain">Aonde seja possível ver no detalhe todas as aprovações do cliente. Garantindo total segurança para quem está prestando o serviço.</p>
+                  <p class="feature-explain">Aonde é possível ver no detalhe todas as aprovações do cliente. Garantindo total controle para quem está prestando o serviço.</p>
               </div>
               <div class="col-sm-4">
                   <img src="static/img/custom.png" class="img-responsive img-center" alt="">
-                  <h4>PERSONALIZADA</h4>
-                  <p class="feature-explain">Para quem acredita que tecnologia e design fazem a diferença no seu processo de trabalho. E quer ver a sua marca presente em todos os contatos com seu cliente.</p>
+                  <h4>PERSONALIZADAS</h4>
+                  <p class="feature-explain">Para quem acredita que tecnologia e design fazem a diferença no seu processo de trabalho. E quer ver a sua marca presente em todos pontos de contato.</p>
               </div>
               <div class="col-sm-4">
                   <img src="static/img/boths.png" class="img-responsive img-center" alt="">
                   <h4>IDEAL PARA AMBAS AS PARTES</h4>
-                  <p class="feature-explain">O cliente também tem vez. Revisando e assinando propostas online garantindo a segurança da negociação para fechar o negócio.</p>
+                  <p class="feature-explain">O cliente também tem vez. Revisando e assinando propostas online garantindo a segurança da negociação.</p>
               </div>
           </div>
         <div class="modal fade email-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
@@ -107,7 +106,7 @@
                     <span>Gostaria de ter acesso antecipado antes de lançarmos?</span>
                   </div>
                   <div class="body-explain">
-                    <span>Estamos em beta fechado no momento. Cadastre-se com o email da sua empresa e nós retornaremos para você assim que possível.</span>
+                    <span>Estamos em beta fechado no momento. Cadastre-se com o email da sua empresa e nós retornaremos para você assim que disponível.</span>
                   </div>
                 </div>
               </div>
@@ -123,19 +122,22 @@
             </div>
         </footer>
     </div>
-
     <!-- Begin Inspectlet Embed Code -->
     <script type="text/javascript" id="inspectletjs">
     window.__insp = window.__insp || [];
-    __insp.push(['wid', 70680997]);
+    __insp.push(['wid', 2096652944]);
     (function() {
-    function ldinsp(){var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
-    document.readyState != "complete" ? (window.attachEvent ? window.attachEvent('onload', ldinsp) : window.addEventListener('load', ldinsp, false)) : ldinsp();
+    function ldinsp(){if(typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
+    setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent ? window.attachEvent('onload', ldinsp) : window.addEventListener('load', ldinsp, false)) : ldinsp();
     })();
     </script>
     <!-- End Inspectlet Embed Code -->
-
+    <script>
+      window.intercomSettings = {
+        app_id: "e5sx5sfk"
+      };
+    </script>
+    <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/e5sx5sfk';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
   </body>
-
   <script data-main="static/js/main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.min.js"></script>
 </html>
