--- a/server/static/index.html
+++ b/server/static/index.html
@@ -18,6 +18,7 @@
       <meta name="description" content="Só na newintend.com você emite propostas comerciais de forma eficiente e personalizada, aproximando sua empresa de seus clientes e garantindo segurança e agilidade em suas negociações."/>
       <meta name="keywords" content="Proposta Comercial, Orçamento, Proposta, Sistema, Negociação, Personalizada, Agilidade, Arquitetura, Projeto, Exemplo"/>
       <meta name="application-name" content="newintend.com"/>
+      <link rel="icon" type="image/png" href="static/img/f-icon.png" />
   </head>
   <body>
     <div>
