Including og:image to fb

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -12,7 +12,7 @@
       <meta property="og:url" content="http://www.newintend.com" />
       <meta property="og:type" content="website" />
       <meta property="og:title" content="NewIntend" />
-      <meta property="og:image" content="http://www.newintend/static/img/logo.png" />
+      <meta property="og:image" content="http://www.newintend.com/static/img/product.png"/>
       <meta property="busca:species" content="Home"/>
       <meta property="busca:publisher" content="www.newintend.com"/>
       <meta name="description" content="Só na newintend.com você emite propostas comerciais de forma eficiente e personalizada, aproximando sua empresa de seus clientes e garantindo segurança e agilidade em suas negociações."/>
