Including search console

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -9,6 +9,7 @@
       <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700|PT+Sans:400,700' rel='stylesheet' type='text/css'>
       <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
       <title class="page-tittle">Propostas eficientes</title>
+      <meta name="google-site-verification" content="qp6qfRoJ-_oMZHS2aX19u3F22O6MUsrjbsVCu5M8-CI" />
       <meta property="og:url" content="http://www.newintend.com" />
       <meta property="og:type" content="website" />
       <meta property="og:title" content="NewIntend" />
