--- a/server/static/index.html
+++ b/server/static/index.html
@@ -17,7 +17,7 @@
       <meta property="busca:species" content="Home"/>
       <meta property="busca:publisher" content="www.newintend.com"/>
       <meta name="description" content="Só na newintend.com você emite propostas comerciais de forma eficiente e personalizada, aproximando sua empresa de seus clientes e garantindo segurança e agilidade em suas negociações."/>
-      <meta name="keywords" content="Proposta Comercial, Orçamento, Proposta, Sistema, Negociação, Personalizada, Agilidade, Arquitetura, Projeto, Exemplo"/>
+      <meta name="keywords" content="Propostas comerciais, Modelo de orçamento, Proposta, Sistema de proposta, Sistema de orçamento, Negociação, Orçamento personalizado, Modelo de propostas, NewIntend, Eficiente"/>
       <meta name="application-name" content="newintend.com"/>
       <link rel="icon" type="image/png" href="static/img/f-icon.png" />
   </head>
